--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "contentful": "^10.2.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "framer-motion": "^10.12.16",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
